:wheelchair: Ensure mobile users can toggle the menu visibility

--- a/src/langerak_gkv/sass/components/_menu.scss
+++ b/src/langerak_gkv/sass/components/_menu.scss
@@ -59,6 +59,10 @@ $menu-space-inbetween: 1.5rem;
     }
   }
 
+  &#{&}--opened &__layer {
+    @include show-on-mobile(block);
+  }
+
   & &__item {
     @include title;
     display: block;
